new arabic words

--- a/index.html
+++ b/index.html
@@ -202,18 +202,16 @@
   {"tense1": "Organiser", "tense2": "نَظَّمَ / يُنَظِّمُ / تَنْظِيم / نَظِّمْ / يُنَظَّمُ / نُظِّمَ", "type": "verb"},
   {"tense1": "Pour attirer les gens", "tense2": "لِجَذْبِ النَّاس", "type": "sentence"},
   {"tense1": "L'utilisation", "tense2": "الاِسْتِخْدَام", "type": "word"},
-  {"tense1": "Louer (présent)", "tense2": "اِسْتَأْجَرَ / يَسْتَأْجِرُ / اِسْتِئْجَار / اِسْتَأْجِرْ / يُسْتَأْجَرُ / اُسْتُؤْجِرَ", "type": "verb"},
-  {"tense1": "Louer (passé)", "tense2": "اِسْتَأْجَرَ / يَسْتَأْجِرُ / اِسْتِئْجَار / اِسْتَأْجِرْ / يُسْتَأْجَرُ / اُسْتُؤْجِرَ", "type": "verb"},
+  {"tense1": "Louer ", "tense2": "اِسْتَأْجَرَ / يَسْتَأْجِرُ / اِسْتِئْجَار / اِسْتَأْجِرْ / يُسْتَأْجَرُ / اُسْتُؤْجِرَ", "type": "verb"},
   {"tense1": "Récupérer", "tense2": "اِسْتَعَادَ / يَسْتَعِيدُ / اِسْتِعَادَة / اِسْتَعِدْ / يُسْتَعَادُ / اُسْتُعِيدَ", "type": "verb"},
   {"tense1": "Enceinte (femme enceinte)", "tense2": "حَامِل / حَوَامِل / حَامِلَتَان / حَوَامِلَ / حَامِلَتَيْن", "type": "word"},
   {"tense1": "Enceinte (audio)", "tense2": "سَمَّاعَة / سَمَّاعَات / سَمَّاعَتَان / سَمَّاعَاتٍ / سَمَّاعَتَيْن", "type": "word"},
   {"tense1": "Les uns après les autres", "tense2": "وَاحِد تِلْوَ الآخَر", "type": "sentence"},
   {"tense1": "Présentateur", "tense2": "مُقَدِّم البَرْنَامَج / مُقَدِّمُو البَرَامِج / مُقَدِّمَا البَرْنَامَج / مُقَدِّمِي البَرَامِج / مُقَدِّمَيِ البَرْنَامَج", "type": "word"},
-  {"tense1": "Répondre (présent)", "tense2": "أَجَابَ / يُجِيبُ / إِجَابَة / أَجِبْ / يُجَابُ / أُجِيبَ", "type": "verb"},
-  {"tense1": "Répondre (passé)", "tense2": "أَجَابَ / يُجِيبُ / إِجَابَة / أَجِبْ / يُجَابُ / أُجِيبَ", "type": "verb"},
+  {"tense1": "Répondre", "tense2": "أَجَابَ / يُجِيبُ / إِجَابَة / أَجِبْ / يُجَابُ / أُجِيبَ", "type": "verb"},
   {"tense1": "C'est trop court pour se faire une opinion solide", "tense2": "هَذَا قَصِير جِدًّا لِتَكْوِين رَأْي قَوِيّ", "type": "sentence"},
   {"tense1": "Croissance économique", "tense2": "النُّمُوّ الاقْتِصَادِيّ", "type": "sentence"},
-  {"tense1": "Ziyada", "tense2": "زِيَادَة / زِيَادَات / زِيَادَتَان / زِيَادَاتٍ / زِيَادَتَيْن", "type": "word"},
+  {"tense1": "Augmentation", "tense2": "زِيَادَة / زِيَادَات / زِيَادَتَان / زِيَادَاتٍ / زِيَادَتَيْن", "type": "word"},
   {"tense1": "Qui est le meilleur orateur?", "tense2": "مَنْ هُوَ أَفْضَل مُتَحَدِّث؟", "type": "sentence"},
   {"tense1": "Présenter", "tense2": "قَدَّمَ / يُقَدِّمُ / تَقْدِيم / قَدِّمْ / يُقَدَّمُ / قُدِّمَ", "type": "verb"},
   {"tense1": "Offrir", "tense2": "قَدَّمَ / يُقَدِّمُ / تَقْدِيم / قَدِّمْ / يُقَدَّمُ / قُدِّمَ", "type": "verb"},
@@ -272,8 +270,7 @@
   {"tense1": "Le film qui a remporté le plus d'argent est le dernier", "tense2": "الفِيلْم الَّذِي حَصَل عَلَى أَكْبَر قَدْر مِن المَال هُو الأَخِير", "type": "sentence"},
   {"tense1": "Obtenu", "tense2": "حَصَلَ / يَحْصُل / حُصُول / اُحْصُلْ / يُحْصَل / حُصِلَ", "type": "verb"},
   {"tense1": "Quantité d'argent", "tense2": "قَدْر مِن المَال", "type": "sentence"},
-  {"tense1": "Diviser (présent)", "tense2": "قَسَّمَ / يُقَسِّم / تَقْسِيم / قَسِّمْ / يُقَسَّم / قُسِّمَ", "type": "verb"},
-  {"tense1": "Divisé (passé)", "tense2": "قَسَّمَ / يُقَسِّم / تَقْسِيم / قَسِّمْ / يُقَسَّم / قُسِّمَ", "type": "verb"},
+  {"tense1": "Diviser", "tense2": "قَسَّمَ / يُقَسِّم / تَقْسِيم / قَسِّمْ / يُقَسَّم / قُسِّمَ", "type": "verb"},
   {"tense1": "Au lieu de gagner un milliard, ils ont gagné deux milliards", "tense2": "بَدَلاً مِن كَسْب مِلْيَار، حَصَلُوا عَلَى مِلْيَارَيْن", "type": "sentence"},
   {"tense1": "Essence", "tense2": "بِنْزِين", "type": "word"},
   {"tense1": "Billet (monnaie)", "tense2": "وَرَقَة نَقْدِيَّة / أَوْرَاق نَقْدِيَّة / وَرَقَتَان نَقْدِيَّتَان / أَوْرَاقًا نَقْدِيَّةً / وَرَقَتَيْن نَقْدِيَّتَيْن", "type": "word"},
@@ -1136,7 +1133,6 @@
   {"tense1": "Maillot de bain", "tense2": "مَلَابِس السِّبَاحَة", "type": "sentence"},
   {"tense1": "Logique", "tense2": "مَنْطِق / مَنَاطِق / مَنْطِقَان / مَنَاطِقَ / مَنْطِقَيْن", "type": "word"},
   {"tense1": "Lien", "tense2": "صِلَة / صِلَات / صِلَتَان / صِلَاتٍ / صِلَتَيْن", "type": "word"},
-  {"tense1": "Colonne vertébrale", "tense2": "عَمُود فِقْرِيّ / أَعْمِدَة فِقْرِيَّة / عَمُودَان فِقْرِيَّان / أَعْمِدَةً فِقْرِيَّةً / عَمُودَيْن فِقْرِيَّيْن", "type": "word"},
   {"tense1": "Automatiquement", "tense2": "تِلْقَائِيًّا", "type": "word"},
   {"tense1": "Embarrassé", "tense2": "مُحْرَج / مُحْرَجُون / مُحْرَجَان / مُحْرَجِين / مُحْرَجَيْن", "type": "word"},
   {"tense1": "Cape", "tense2": "عَبَاءَة / عَبَاءَات / عَبَاءَتَان / عَبَاءَاتٍ / عَبَاءَتَيْن", "type": "word"},
@@ -1145,7 +1141,36 @@
   {"tense1": "Beau/charmant", "tense2": "وَسِيم / وُسَمَاء / وَسِيمَان / وُسَمَاءَ / وَسِيمَيْن", "type": "word"},
   {"tense1": "Moustache", "tense2": "شَارِب / شَوَارِب / شَارِبَان / شَوَارِبَ / شَارِبَيْن", "type": "word"},
   {"tense1": "Craie", "tense2": "طَبَاشِير / طَبَاشِيرَات / طَبَاشِيرَان / طَبَاشِيرَاتٍ / طَبَاشِيرَيْن", "type": "word"},
-  {"tense1": "S'assoupir", "tense2": "غَفَا / يَغْفُو / غَفْو / اُغْفُ / يُغْفَى / غُفِيَ", "type": "verb"}
+  {"tense1": "S'assoupir", "tense2": "غَفَا / يَغْفُو / غَفْو / اُغْفُ / يُغْفَى / غُفِيَ", "type": "verb"},
+  {"tense1": "Posséder", "tense2": "مَلَكَ/يَمْلِكُ/مِلْك/اِمْلِكْ/يُمْلَكُ/مُلِكَ", "type": "verb"},
+  {"tense1": "Contrôler/ajuster", "tense2": "ضَبَطَ/يَضْبِطُ/ضَبْط/اِضْبِطْ/يُضْبَطُ/ضُبِطَ", "type": "verb"},
+  {"tense1": "Parallèle", "tense2": "مُوَازٍ/مُوَازِيَانِ/مُوَازُونَ/مُوَازِينَ/مُوَازِيَيْنِ", "type": "word"},
+  {"tense1": "Groupe", "tense2": "عَيِّنَة/عَيِّنَاتٌ/عَيِّنَتَانِ/عَيِّنَاتٍ/عَيِّنَتَيْنِ", "type": "word"},
+  {"tense1": "Être incapable", "tense2": "عَجَزَ/يَعْجِزُ/عَجْز/اِعْجَزْ/يُعْجَزُ/عُجِزَ", "type": "verb"},
+  {"tense1": "Modèle/moule", "tense2": "قَالِب/قَوَالِب/قَالِبَانِ/قَوَالِبَ/قَالِبَيْنِ", "type": "word"},
+  {"tense1": "Particulier", "tense2": "مُعَيَّن/مُعَيَّنُونَ/مُعَيَّنَانِ/مُعَيَّنِينَ/مُعَيَّنَيْنِ", "type": "word"},
+  {"tense1": "Psychologue", "tense2": "عَالِم النَّفْس/عُلَمَاء النَّفْس/عَالِمَا النَّفْس/عُلَمَاءَ النَّفْس/عَالِمَيْ النَّفْس", "type": "word"},
+  {"tense1": "Contribuer", "tense2": "سَاهَمَ/يُسَاهِمُ/مُسَاهَمَة/سَاهِمْ/يُسَاهَمُ/سُوهِمَ", "type": "verb"},
+  {"tense1": "Varier", "tense2": "تَرَاوَحَ/يَتَرَاوَحُ/تَرَاوُح/تَرَاوَحْ/يُتَرَاوَحُ/تُرُوِّحَ", "type": "verb"},
+  {"tense1": "Se terminer", "tense2": "تَمَّ/يَتِمُّ/إِتْمَام/تِمَّ/يُتَمُّ/تُمَّ", "type": "verb"},
+  {"tense1": "S'étendre", "tense2": "اِمْتَدَّ/يَمْتَدُّ/اِمْتِدَاد/اِمْتَدَّ/يُمْتَدُّ/اُمْتُدَّ", "type": "verb"},
+  {"tense1": "Chirurgien", "tense2": "جَرَّاح/جَرَّاحُون/جَرَّاحَانِ/جَرَّاحِينَ/جَرَّاحَيْنِ", "type": "word"},
+  {"tense1": "Jumeaux", "tense2": "تَوْأَم/تَوَائِم/تَوْأَمَانِ/تَوَائِمَ/تَوْأَمَيْنِ", "type": "word"},
+  {"tense1": "Poumon", "tense2": "رِئَة/رِئَات/رِئَتَانِ/رِئَاتٍ/رِئَتَيْنِ", "type": "word"},
+  {"tense1": "Cancer", "tense2": "سَرَطَان/سَرَطَانَات/سَرَطَانَانِ/سَرَطَانَاتٍ/سَرَطَانَيْنِ", "type": "word"},
+  {"tense1": "Gencive", "tense2": "لِثَة/لِثَات/لِثَتَانِ/لِثَاتٍ/لِثَتَيْنِ", "type": "word"},
+  {"tense1": "Maigre", "tense2": "نَحِيف/نِحَاف/نَحِيفَانِ/نِحَافًا/نَحِيفَيْنِ", "type": "word"},
+  {"tense1": "Prétendre", "tense2": "اِدَّعَى/يَدَّعِي/اِدِّعَاء/اِدَّعِ/يُدَّعَى/اُدُّعِيَ", "type": "verb"},
+  {"tense1": "Examen", "tense2": "اِمْتِحَان/اِمْتِحَانَات/اِمْتِحَانَانِ/اِمْتِحَانَاتٍ/اِمْتِحَانَيْنِ", "type": "word"},
+  {"tense1": "Patient (hôpital)", "tense2": "مَرِيض/مَرْضَى/مَرِيضَانِ/مَرْضَى/مَرِيضَيْنِ", "type": "word"},
+  {"tense1": "Patient", "tense2": "صَابِر/صَابِرُون/صَابِرَانِ/صَابِرِينَ/صَابِرَيْنِ", "type": "word"},
+  {"tense1": "Pansement", "tense2": "ضِمَادَة/ضِمَادَات/ضِمَادَتَانِ/ضِمَادَاتٍ/ضِمَادَتَيْنِ", "type": "word"},
+  {"tense1": "Traduire", "tense2": "تَرْجَمَ/يُتَرْجِمُ/تَرْجَمَة/تَرْجِمْ/يُتَرْجَمُ/تُرْجِمَ", "type": "verb"},
+  {"tense1": "Maitriser", "tense2": "أَتْقَنَ/يُتْقِنُ/إِتْقَان/أَتْقِنْ/يُتْقَنُ/أُتْقِنَ", "type": "verb"},
+  {"tense1": "Gaspiller", "tense2": "ضَيَّعَ/يُضَيِّعُ/تَضْيِيع/ضَيِّعْ/يُضَيَّعُ/ضُيِّعَ", "type": "verb"},
+  {"tense1": "Imiter", "tense2": "قَلَّدَ/يُقَلِّدُ/تَقْلِيد/قَلِّدْ/يُقَلَّدُ/قُلِّدَ", "type": "verb"},
+  {"tense1": "Différent", "tense2": "مُخْتَلِف/مُخْتَلِفُون/مُخْتَلِفَانِ/مُخْتَلِفِينَ/مُخْتَلِفَيْنِ", "type": "word"},
+  {"tense1": "Plier", "tense2": "طَوَى/يَطْوِي/طَيّ/اِطْوِ/يُطْوَى/طُوِيَ", "type": "verb"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
