new arabic words

--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,6 @@
   {"tense1": "Craie", "tense2": "طَبَاشِير / طَبَاشِيرَات / طَبَاشِيرَان / طَبَاشِيرَاتٍ / طَبَاشِيرَيْن", "type": "word"},
   {"tense1": "S'assoupir", "tense2": "غَفَا / يَغْفُو / غَفْو / اُغْفُ / يُغْفَى / غُفِيَ", "type": "verb"},
   {"tense1": "Posséder", "tense2": "مَلَكَ/يَمْلِكُ/مِلْك/اِمْلِكْ/يُمْلَكُ/مُلِكَ", "type": "verb"},
-  {"tense1": "Contrôler/ajuster", "tense2": "ضَبَطَ/يَضْبِطُ/ضَبْط/اِضْبِطْ/يُضْبَطُ/ضُبِطَ", "type": "verb"},
   {"tense1": "Parallèle", "tense2": "مُوَازٍ/مُوَازِيَانِ/مُوَازُونَ/مُوَازِينَ/مُوَازِيَيْنِ", "type": "word"},
   {"tense1": "Groupe", "tense2": "عَيِّنَة/عَيِّنَاتٌ/عَيِّنَتَانِ/عَيِّنَاتٍ/عَيِّنَتَيْنِ", "type": "word"},
   {"tense1": "Être incapable", "tense2": "عَجَزَ/يَعْجِزُ/عَجْز/اِعْجَزْ/يُعْجَزُ/عُجِزَ", "type": "verb"},
@@ -1170,7 +1169,8 @@
   {"tense1": "Gaspiller", "tense2": "ضَيَّعَ/يُضَيِّعُ/تَضْيِيع/ضَيِّعْ/يُضَيَّعُ/ضُيِّعَ", "type": "verb"},
   {"tense1": "Imiter", "tense2": "قَلَّدَ/يُقَلِّدُ/تَقْلِيد/قَلِّدْ/يُقَلَّدُ/قُلِّدَ", "type": "verb"},
   {"tense1": "Différent", "tense2": "مُخْتَلِف/مُخْتَلِفُون/مُخْتَلِفَانِ/مُخْتَلِفِينَ/مُخْتَلِفَيْنِ", "type": "word"},
-  {"tense1": "Plier", "tense2": "طَوَى/يَطْوِي/طَيّ/اِطْوِ/يُطْوَى/طُوِيَ", "type": "verb"}
+  {"tense1": "Plier", "tense2": "طَوَى/يَطْوِي/طَيّ/اِطْوِ/يُطْوَى/طُوِيَ", "type": "verb"},
+  {"tense1": "Réglage", "tense2": "إِعْدَاد/إِعْدَادَات/إِعْدَادَانِ/إِعْدَادَاتٍ/إِعْدَادَيْنِ", "type": "word"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
