new arabic words

--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,15 @@
   {"tense1": "Imiter", "tense2": "قَلَّدَ/يُقَلِّدُ/تَقْلِيد/قَلِّدْ/يُقَلَّدُ/قُلِّدَ", "type": "verb"},
   {"tense1": "Différent", "tense2": "مُخْتَلِف/مُخْتَلِفُون/مُخْتَلِفَانِ/مُخْتَلِفِينَ/مُخْتَلِفَيْنِ", "type": "word"},
   {"tense1": "Plier", "tense2": "طَوَى/يَطْوِي/طَيّ/اِطْوِ/يُطْوَى/طُوِيَ", "type": "verb"},
-  {"tense1": "Réglage", "tense2": "إِعْدَاد/إِعْدَادَات/إِعْدَادَانِ/إِعْدَادَاتٍ/إِعْدَادَيْنِ", "type": "word"}
+  {"tense1": "Réglage", "tense2": "إِعْدَاد/إِعْدَادَات/إِعْدَادَانِ/إِعْدَادَاتٍ/إِعْدَادَيْنِ", "type": "word"},
+  {"tense1": "Nationalité", "tense2": "جِنْسِيَّة/جِنْسِيَّات/جِنْسِيَّتَانِ/جِنْسِيَّاتٍ/جِنْسِيَّتَيْنِ", "type": "word"},
+  {"tense1": "Testicule", "tense2": "خُصْيَة/خُصًى/خُصْيَتَانِ/خُصًى/خُصْيَتَيْنِ", "type": "word"},
+  {"tense1": "Quantité", "tense2": "مِقْدَار/مَقَادِير/مِقْدَارَانِ/مَقَادِيرَ/مِقْدَارَيْنِ", "type": "word"},
+  {"tense1": "Sexualité", "tense2": "جِنْسِيَّة/جِنْسِيَّات/جِنْسِيَّتَانِ/جِنْسِيَّاتٍ/جِنْسِيَّتَيْنِ", "type": "word"},
+  {"tense1": "Réveil/alarme", "tense2": "مُنَبِّه/مُنَبِّهَات/مُنَبِّهَانِ/مُنَبِّهَاتٍ/مُنَبِّهَيْنِ", "type": "word"},
+  {"tense1": "Automatiquement", "tense2": "ذَاتِيًّا", "type": "word"},
+  {"tense1": "Alerter", "tense2": "نَبَّهَ/يُنَبِّهُ/تَنْبِيه/نَبِّهْ/يُنَبَّهُ/نُبِّهَ", "type": "verb"},
+  {"tense1": "Réveiller", "tense2": "أَيْقَظَ/يُوقِظُ/إِيقَاظ/أَيْقِظْ/يُوقَظُ/أُوقِظَ", "type": "verb"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
