new arabic words

--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,63 @@
   {"tense1": "Réveil/alarme", "tense2": "مُنَبِّه/مُنَبِّهَات/مُنَبِّهَانِ/مُنَبِّهَاتٍ/مُنَبِّهَيْنِ", "type": "word"},
   {"tense1": "Automatiquement", "tense2": "ذَاتِيًّا", "type": "word"},
   {"tense1": "Alerter", "tense2": "نَبَّهَ/يُنَبِّهُ/تَنْبِيه/نَبِّهْ/يُنَبَّهُ/نُبِّهَ", "type": "verb"},
-  {"tense1": "Réveiller", "tense2": "أَيْقَظَ/يُوقِظُ/إِيقَاظ/أَيْقِظْ/يُوقَظُ/أُوقِظَ", "type": "verb"}
+  {"tense1": "Réveiller", "tense2": "أَيْقَظَ/يُوقِظُ/إِيقَاظ/أَيْقِظْ/يُوقَظُ/أُوقِظَ", "type": "verb"},
+  {"tense1": "Détenteur", "tense2": "صَاحِب / أَصْحَاب / صَاحِبَان / أَصْحَابًا / صَاحِبَيْن", "type": "word"},
+  {"tense1": "Éducation", "tense2": "تَنْشِئَة / تَنْشِئَات", "type": "word"},
+  {"tense1": "En tant que", "tense2": "بِصِفَتِهِ", "type": "sentence"},
+  {"tense1": "Dépendance", "tense2": "اعْتِمَاد / اعْتِمَادَات", "type": "word"},
+  {"tense1": "Effrayer", "tense2": "أَخَافَ / يُخِيفُ / إِخَافَة / أَخِفْ / يُخَاف / أُخِيفَ", "type": "verb"},
+  {"tense1": "Victime", "tense2": "ضَحِيَّة / ضَحَايَا / ضَحِيَّتَان / ضَحَايَا / ضَحِيَّتَيْن", "type": "word"},
+  {"tense1": "Négocier", "tense2": "فَاوَضَ / يُفَاوِضُ / مُفَاوَضَة / فَاوِضْ / يُفَاوَض / فُوِضَ", "type": "verb"},
+  {"tense1": "Conclure", "tense2": "خَلَصَ / يَخْلُصُ / خُلُوص / اخْلُصْ / يُخْلَص / خُلِصَ", "type": "verb"},
+  {"tense1": "Bénéfice", "tense2": "نَفْع / مَنَافِع / نَفْعَان / مَنَافِعَ / نَفْعَيْن", "type": "word"},
+  {"tense1": "Magazine", "tense2": "مَجَلَّة / مَجَلَّات / مَجَلَّتَان / مَجَلَّات / مَجَلَّتَيْن", "type": "word"},
+  {"tense1": "Suer", "tense2": "عَرِقَ / يَعْرَقُ / عَرَق / اعْرَقْ / يُعْرَق / عُرِقَ", "type": "verb"},
+  {"tense1": "Gagnant", "tense2": "فَائِز / فَائِزُون / فَائِزَان / فَائِزِين / فَائِزَيْن", "type": "word"},
+  {"tense1": "Conquérir", "tense2": "غَزَا / يَغْزُو / غَزْو / اغْزُ / يُغْزَى / غُزِيَ", "type": "verb"},
+  {"tense1": "Pomper", "tense2": "ضَخَّ / يَضُخُّ / ضَخّ / ضُخَّ / يُضَخُّ / ضُخَّ", "type": "verb"},
+  {"tense1": "Gravité", "tense2": "جَاذِبِيَّة / جَاذِبِيَّات", "type": "word"},
+  {"tense1": "Règle (mesure)", "tense2": "مِسْطَرَة / مَسَاطِر / مِسْطَرَتَان / مَسَاطِرَ / مِسْطَرَتَيْن", "type": "word"},
+  {"tense1": "Classer", "tense2": "صَنَّفَ / يُصَنِّفُ / تَصْنِيف / صَنِّفْ / يُصَنَّف / صُنِّفَ", "type": "verb"},
+  {"tense1": "Rang", "tense2": "مَرْتَبَة / مَرَاتِب / مَرْتَبَتَان / مَرَاتِبَ / مَرْتَبَتَيْن", "type": "word"},
+  {"tense1": "Évaluer", "tense2": "قَيَّمَ / يُقَيِّمُ / تَقْيِيم / قَيِّمْ / يُقَيَّم / قُيِّمَ", "type": "verb"},
+  {"tense1": "Autrefois", "tense2": "قَدِيمًا", "type": "word"},
+  {"tense1": "Élite", "tense2": "نُخْبَة / نُخَب / نُخْبَتَان / نُخَبًا / نُخْبَتَيْن", "type": "word"},
+  {"tense1": "Couteux", "tense2": "بَاهِظ / بَاهِظُون / بَاهِظَان / بَاهِظِين / بَاهِظَيْن", "type": "word"},
+  {"tense1": "Unique", "tense2": "فَرِيد / فَرِيدُون / فَرِيدَان / فَرِيدِين / فَرِيدَيْن", "type": "word"},
+  {"tense1": "Panier", "tense2": "سَلَّة / سِلَال / سَلَّتَان / سِلَالًا / سَلَّتَيْن", "type": "word"},
+  {"tense1": "Coquille", "tense2": "قِشْرَة / قُشُور / قِشْرَتَان / قُشُورًا / قِشْرَتَيْن", "type": "word"},
+  {"tense1": "Éclore", "tense2": "تَفَقَّسَ / يَتَفَقَّسُ / تَفَقُّس / تَفَقَّسْ / يُتَفَقَّس / تُفُقِّسَ", "type": "verb"},
+  {"tense1": "Encourager", "tense2": "شَجَّعَ / يُشَجِّعُ / تَشْجِيع / شَجِّعْ / يُشَجَّع / شُجِّعَ", "type": "verb"},
+  {"tense1": "Condition", "tense2": "شَرْط / شُرُوط / شَرْطَان / شُرُوطًا / شَرْطَيْن", "type": "word"},
+  {"tense1": "Priorité", "tense2": "أَوْلَوِيَّة / أَوْلَوِيَّات / أَوْلَوِيَّتَان / أَوْلَوِيَّات / أَوْلَوِيَّتَيْن", "type": "word"},
+  {"tense1": "Convaincre", "tense2": "أَقْنَعَ / يُقْنِعُ / إِقْنَاع / أَقْنِعْ / يُقْنَع / أُقْنِعَ", "type": "verb"},
+  {"tense1": "Masse", "tense2": "كُتْلَة / كُتَل / كُتْلَتَان / كُتَلًا / كُتْلَتَيْن", "type": "word"},
+  {"tense1": "Minéral", "tense2": "مَعْدِن / مَعَادِن / مَعْدِنَان / مَعَادِنَ / مَعْدِنَيْن", "type": "word"},
+  {"tense1": "Pourcentage", "tense2": "نِسْبَة / نِسَب / نِسْبَتَان / نِسَبًا / نِسْبَتَيْن", "type": "word"},
+  {"tense1": "Météorite", "tense2": "نَيْزَك / نَيَازِك / نَيْزَكَان / نَيَازِكَ / نَيْزَكَيْن", "type": "word"},
+  {"tense1": "Institut", "tense2": "مَعْهَد / مَعَاهِد / مَعْهَدَان / مَعَاهِدَ / مَعْهَدَيْن", "type": "word"},
+  {"tense1": "Temple", "tense2": "مَعْبَد / مَعَابِد / مَعْبَدَان / مَعَابِدَ / مَعْبَدَيْن", "type": "word"},
+  {"tense1": "haïr", "tense2": "حَقَدَ / يَحْقِدُ / حِقْد / احْقِدْ / يُحْقَد / حُقِدَ", "type": "verb"},
+  {"tense1": "Norme", "tense2": "مَعْيَار / مَعَايِير / مَعْيَارَان / مَعَايِيرَ / مَعْيَارَيْن", "type": "word"},
+  {"tense1": "Réputation", "tense2": "سُمْعَة / سُمْعَات", "type": "word"},
+  {"tense1": "Citation", "tense2": "اسْتِشْهَاد / اسْتِشْهَادَات / اسْتِشْهَادَان / اسْتِشْهَادَات / اسْتِشْهَادَيْن", "type": "word"},
+  {"tense1": "Taille", "tense2": "قَامَة / قَامَات / قَامَتَان / قَامَات / قَامَتَيْن", "type": "word"},
+  {"tense1": "Bénéfique", "tense2": "نَافِع / نَافِعُون / نَافِعَان / نَافِعِين / نَافِعَيْن", "type": "word"},
+  {"tense1": "Prédateur", "tense2": "مُفْتَرِس / مُفْتَرِسُون / مُفْتَرِسَان / مُفْتَرِسِين / مُفْتَرِسَيْن", "type": "word"},
+  {"tense1": "Dévorer", "tense2": "افْتَرَسَ / يَفْتَرِسُ / افْتِرَاس / افْتَرِسْ / يُفْتَرَس / افْتُرِسَ", "type": "verb"},
+  {"tense1": "Organe", "tense2": "عُضْو / أَعْضَاء / عُضْوَان / أَعْضَاءً / عُضْوَيْن", "type": "word"},
+  {"tense1": "Se Reproduire", "tense2": "تَنَاسَلَ / يَتَنَاسَلُ / تَنَاسُل / تَنَاسَلْ / يُتَنَاسَل / تُنُوسِلَ", "type": "verb"},
+  {"tense1": "Chauve-souris", "tense2": "خُفَّاش / خَفَافِيش / خُفَّاشَان / خَفَافِيشَ / خُفَّاشَيْن", "type": "word"},
+  {"tense1": "Mite", "tense2": "عُثّ / عُثوث / عُثَّان / عُثوثًا / عُثَّيْن", "type": "word"},
+  {"tense1": "Brouillage", "tense2": "تَشْوِيش / تَشْوِيشَات", "type": "word"},
+  {"tense1": "Réservé à", "tense2": "حَكْرًا عَلَى", "type": "sentence"},
+  {"tense1": "Excitation", "tense2": "إِثَارَة / إِثَارَات", "type": "word"},
+  {"tense1": "Article", "tense2": "مَقَالَة / مَقَالَات / مَقَالَتَان / مَقَالَات / مَقَالَتَيْن", "type": "word"},
+  {"tense1": "Se caractérise", "tense2": "يَتَمَيَّزُ", "type": "sentence"},
+  {"tense1": "Étonnement", "tense2": "دَهْشَة / دَهْشَات", "type": "word"},
+  {"tense1": "Esclave", "tense2": "عَبْد / عَبِيد / عَبْدَان / عَبِيدًا / عَبْدَيْن", "type": "word"},
+  {"tense1": "Agradar", "tense2": "رَاقَ / يَرُوقُ / رَوَاق / رُقْ / يُرَاق / رِيقَ", "type": "verb"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
