new arabic words

--- a/index.html
+++ b/index.html
@@ -1231,10 +1231,11 @@
   {"tense1": "Réservé à", "tense2": "حَكْرًا عَلَى", "type": "sentence"},
   {"tense1": "Excitation", "tense2": "إِثَارَة / إِثَارَات", "type": "word"},
   {"tense1": "Article", "tense2": "مَقَالَة / مَقَالَات / مَقَالَتَان / مَقَالَات / مَقَالَتَيْن", "type": "word"},
-  {"tense1": "Se caractérise", "tense2": "يَتَمَيَّزُ", "type": "sentence"},
-  {"tense1": "Étonnement", "tense2": "دَهْشَة / دَهْشَات", "type": "word"},
+  {"tense1": "Se caractériser", "tense2": "تَمَيَّزَ/يَتَمَيَّزُ/تَمَيُّز/تَمَيَّزْ/يُتَمَيَّزُ/تُمُيِّزَ", "type": "verb"},  {"tense1": "Étonnement", "tense2": "دَهْشَة / دَهْشَات", "type": "word"},
   {"tense1": "Esclave", "tense2": "عَبْد / عَبِيد / عَبْدَان / عَبِيدًا / عَبْدَيْن", "type": "word"},
-  {"tense1": "Agradar", "tense2": "رَاقَ / يَرُوقُ / رَوَاق / رُقْ / يُرَاق / رِيقَ", "type": "verb"}
+  {"tense1": "Agradar", "tense2": "رَاقَ / يَرُوقُ / رَوَاق / رُقْ / يُرَاق / رِيقَ", "type": "verb"},
+  { "tense1": "pipi", "tense2": "بُول", "type": "word"},
+  {"tense1": "caca", "tense2": "بُرَاز", "type": "word" }
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
