new arabic words

--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,62 @@
   {"tense1": "Esclave", "tense2": "عَبْد / عَبِيد / عَبْدَان / عَبِيدًا / عَبْدَيْن", "type": "word"},
   {"tense1": "Agradar", "tense2": "رَاقَ / يَرُوقُ / رَوَاق / رُقْ / يُرَاق / رِيقَ", "type": "verb"},
   { "tense1": "pipi", "tense2": "بُول", "type": "word"},
-  {"tense1": "caca", "tense2": "بُرَاز", "type": "word" }
+  {"tense1": "caca", "tense2": "بُرَاز", "type": "word" },
+  {"tense1": "Gronder", "tense2": "وَبَّخَ/يُوَبِّخُ/تَوْبِيخ/وَبِّخْ/يُوَبَّخُ/وُبِّخَ", "type": "verb"},
+  {"tense1": "Punir", "tense2": "عَاقَبَ/يُعَاقِبُ/مُعَاقَبَة/عَاقِبْ/يُعَاقَبُ/عُوقِبَ", "type": "verb"},
+  {"tense1": "Fantôme", "tense2": "شَبَح/أَشْبَاح/شَبَحَان/أَشْبَاحًا/شَبَحَيْن", "type": "word"},
+  {"tense1": "Citrouille", "tense2": "يَقْطِين/يَقَاطِين/يَقْطِينَان/يَقَاطِينَ/يَقْطِينَيْن", "type": "word"},
+  {"tense1": "Halloween", "tense2": "عِيد الْهَلَع", "type": "sentence"},
+  {"tense1": "Pouvoir", "tense2": "سُلْطَة/سُلُطَات/سُلْطَتَان/سُلُطَاتٍ/سُلْطَتَيْن", "type": "word"},
+  {"tense1": "Excellence", "tense2": "اِمْتِيَاز/اِمْتِيَازَات/اِمْتِيَازَان/اِمْتِيَازَاتٍ/اِمْتِيَازَيْن", "type": "word"},
+  {"tense1": "Sagesse", "tense2": "حِكْمَة/حِكَم/حِكْمَتَان/حِكَمًا/حِكْمَتَيْن", "type": "word"},
+  {"tense1": "Avoir tendance à", "tense2": "مَالَ/يَمِيلُ/مَيْل/مِلْ/يُمَالُ/مِيلَ", "type": "verb"},
+  {"tense1": "Arrogance", "tense2": "تَعَجْرُف", "type": "word"},
+  {"tense1": "Intuition", "tense2": "بَدِيهَة/بَدَائِه/بَدِيهَتَان/بَدَائِهَ/بَدِيهَتَيْن", "type": "word"},
+  {"tense1": "Point d'interrogation", "tense2": "عَلَامَة اِسْتِفْهَام", "type": "sentence"},
+  {"tense1": "Énigme", "tense2": "لُغْز/أَلْغَاز/لُغْزَان/أَلْغَازًا/لُغْزَيْن", "type": "word"},
+  {"tense1": "Loupe", "tense2": "عَدَسَة مُكَبِّرَة", "type": "sentence"},
+  {"tense1": "Détective", "tense2": "مُحَقِّق/مُحَقِّقُون/مُحَقِّقَان/مُحَقِّقِين/مُحَقِّقَيْن", "type": "word"},
+  {"tense1": "Mystérieux", "tense2": "غَامِض/غَوَامِض/غَامِضَان/غَوَامِضَ/غَامِضَيْن", "type": "word"},
+  {"tense1": "Sentir", "tense2": "شَمَّ/يَشُمُّ/شَمّ/شُمَّ/يُشَمُّ/شُمَّ", "type": "verb"},
+  {"tense1": "Palmier", "tense2": "نَخْلَة/نَخِيل/نَخْلَتَان/نَخِيلًا/نَخْلَتَيْن", "type": "word"},
+  {"tense1": "Arroser", "tense2": "سَقَى/يَسْقِي/سَقْي/اِسْقِ/يُسْقَى/سُقِيَ", "type": "verb"},
+  {"tense1": "Miette", "tense2": "فُتَات/فُتَاتَات/فُتَاتَان/فُتَاتَاتٍ/فُتَاتَيْن", "type": "word"},
+  {"tense1": "Sauf", "tense2": "بِاسْتِثْنَاء", "type": "word"},
+  {"tense1": "Profond", "tense2": "عَمِيق/عِمَاق/عَمِيقَان/عِمَاقًا/عَمِيقَيْن", "type": "word"},
+  {"tense1": "Abstrait", "tense2": "مُجَرَّد/مُجَرَّدَات/مُجَرَّدَان/مُجَرَّدَاتٍ/مُجَرَّدَيْن", "type": "word"},
+  {"tense1": "Compléter", "tense2": "أَكْمَلَ/يُكْمِلُ/إِكْمَال/أَكْمِلْ/يُكْمَلُ/أُكْمِلَ", "type": "verb"},
+  {"tense1": "Expérience", "tense2": "تَجْرِبَة/تَجَارِب/تَجْرِبَتَان/تَجَارِبَ/تَجْرِبَتَيْن", "type": "word"},
+  {"tense1": "Affaiblir", "tense2": "أَضْعَفَ/يُضْعِفُ/إِضْعَاف/أَضْعِفْ/يُضْعَفُ/أُضْعِفَ", "type": "verb"},
+  {"tense1": "Filmer", "tense2": "صَوَّرَ/يُصَوِّرُ/تَصْوِير/صَوِّرْ/يُصَوَّرُ/صُوِّرَ", "type": "verb"},
+  {"tense1": "Altitude", "tense2": "اِرْتِفَاع/اِرْتِفَاعَات/اِرْتِفَاعَان/اِرْتِفَاعَاتٍ/اِرْتِفَاعَيْن", "type": "word"},
+  {"tense1": "Tissu", "tense2": "نَسِيج/أَنْسِجَة/نَسِيجَان/أَنْسِجَةً/نَسِيجَيْن", "type": "word"},
+  {"tense1": "Persévérer", "tense2": "وَاظَبَ/يُوَاظِبُ/مُوَاظَبَة/وَاظِبْ/يُوَاظَبُ/وُوظِبَ", "type": "verb"},
+  {"tense1": "Choquer", "tense2": "صَعَقَ/يَصْعَقُ/صَعْق/اِصْعَقْ/يُصْعَقُ/صُعِقَ", "type": "verb"},
+  {"tense1": "Élever", "tense2": "تَرَبَّى/يَتَرَبَّى/تَرَبٍّ/تَرَبَّ/يُتَرَبَّى/تُرُبِّيَ", "type": "verb"},
+  {"tense1": "Terrier", "tense2": "جُحْر/جُحُور/جُحْرَان/جُحُورًا/جُحْرَيْن", "type": "word"},
+  {"tense1": "Probablement", "tense2": "عَلَى الْأَرْجَح", "type": "sentence"},
+  {"tense1": "Foule", "tense2": "جَمْع/جُمُوع/جَمْعَان/جُمُوعًا/جَمْعَيْن", "type": "word"},
+  {"tense1": "Humide", "tense2": "رَطِب/رِطَاب/رَطِبَان/رِطَابًا/رَطِبَيْن", "type": "word"},
+  {"tense1": "Loi", "tense2": "قَانُون/قَوَانِين/قَانُونَان/قَوَانِينَ/قَانُونَيْن", "type": "word"},
+  {"tense1": "Villa", "tense2": "فِيلَّا/فِلَل/فِيلَّتَان/فِلَلًا/فِيلَّتَيْن", "type": "word"},
+  {"tense1": "Accueillir", "tense2": "رَحَّبَ/يُرَحِّبُ/تَرْحِيب/رَحِّبْ/يُرَحَّبُ/رُحِّبَ", "type": "verb"},
+  {"tense1": "Notifier", "tense2": "أَخْطَرَ/يُخْطِرُ/إِخْطَار/أَخْطِرْ/يُخْطَرُ/أُخْطِرَ", "type": "verb"},
+  {"tense1": "Prix", "tense2": "سِعْر/أَسْعَار/سِعْرَان/أَسْعَارًا/سِعْرَيْن", "type": "word"},
+  {"tense1": "Inciter", "tense2": "حَثَّ/يَحُثُّ/حَثّ/حُثَّ/يُحَثُّ/حُثَّ", "type": "verb"},
+  {"tense1": "Atmosphère", "tense2": "جَوّ/أَجْوَاء/جَوَّان/أَجْوَاءً/جَوَّيْن", "type": "word"},
+  {"tense1": "Nerf", "tense2": "عَصَب/أَعْصَاب/عَصَبَان/أَعْصَابًا/عَصَبَيْن", "type": "word"},
+  {"tense1": "Rafraichir", "tense2": "أَنْعَشَ/يُنْعِشُ/إِنْعَاش/أَنْعِشْ/يُنْعَشُ/أُنْعِشَ", "type": "verb"},
+  {"tense1": "Humeur", "tense2": "مِزَاج/أَمْزِجَة/مِزَاجَان/أَمْزِجَةً/مِزَاجَيْن", "type": "word"},
+  {"tense1": "Méditer", "tense2": "تَأَمَّلَ/يَتَأَمَّلُ/تَأَمُّل/تَأَمَّلْ/يُتَأَمَّلُ/تُؤُمِّلَ", "type": "verb"},
+  {"tense1": "Chute", "tense2": "هُطُول/هُطُولَات/هُطُولَان/هُطُولَاتٍ/هُطُولَيْن", "type": "word"},
+  {"tense1": "Honnête", "tense2": "صَادِق/صَادِقُون/صَادِقَان/صَادِقِين/صَادِقَيْن", "type": "word"},
+  {"tense1": "Passeport", "tense2": "جَوَاز سَفَر/جَوَازَات سَفَر/جَوَازَا سَفَر/جَوَازَاتِ سَفَرٍ/جَوَازَيْ سَفَر", "type": "word"},
+  {"tense1": "Se balancer", "tense2": "تَأَرْجَحَ/يَتَأَرْجَحُ/تَأَرْجُح/تَأَرْجَحْ/يُتَأَرْجَحُ/تُؤُرْجِحَ", "type": "verb"},
+  {"tense1": "Pays", "tense2": "دَوْلَة/دُوَل/دَوْلَتَان/دُوَلًا/دَوْلَتَيْن", "type": "word"},
+  {"tense1": "Peindre", "tense2": "رَسَمَ/يَرْسُمُ/رَسْم/اُرْسُمْ/يُرْسَمُ/رُسِمَ", "type": "verb"},
+  {"tense1": "Innocent", "tense2": "بَرِيء/أَبْرِيَاء/بَرِيئَان/أَبْرِيَاءَ/بَرِيئَيْن", "type": "word"},
+  {"tense1": "Être composé", "tense2": "تَكَوَّنَ/يَتَكَوَّنُ/تَكَوُّن/تَكَوَّنْ/يُتَكَوَّنُ/تُكُوِّنَ", "type": "verb"}
 ]
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
