new arabic words

--- a/index.html
+++ b/index.html
@@ -1290,8 +1290,41 @@
   {"tense1": "Pays", "tense2": "دَوْلَة/دُوَل/دَوْلَتَان/دُوَلًا/دَوْلَتَيْن", "type": "word"},
   {"tense1": "Peindre", "tense2": "رَسَمَ/يَرْسُمُ/رَسْم/اُرْسُمْ/يُرْسَمُ/رُسِمَ", "type": "verb"},
   {"tense1": "Innocent", "tense2": "بَرِيء/أَبْرِيَاء/بَرِيئَان/أَبْرِيَاءَ/بَرِيئَيْن", "type": "word"},
-  {"tense1": "Être composé", "tense2": "تَكَوَّنَ/يَتَكَوَّنُ/تَكَوُّن/تَكَوَّنْ/يُتَكَوَّنُ/تُكُوِّنَ", "type": "verb"}
-]
+  {"tense1": "Être composé", "tense2": "تَكَوَّنَ/يَتَكَوَّنُ/تَكَوُّن/تَكَوَّنْ/يُتَكَوَّنُ/تُكُوِّنَ", "type": "verb"},
+  {"tense1": "paysan", "tense2": "فَلّاح / فَلّاحون / فَلّاحَان / فَلّاحين / فَلّاحَيْن", "type": "word"},
+    {"tense1": "prêter", "tense2": "أَعَارَ / يُعِيرُ / إِعَارَة / أَعِرْ / يُعَارُ / أُعِيرَ", "type": "verb"},
+    {"tense1": "camp", "tense2": "مُخَيَّم / مُخَيَّمَات / مُخَيَّمَان / مُخَيَّمَاتٍ / مُخَيَّمَيْن", "type": "word"},
+    {"tense1": "source", "tense2": "مَصْدَر / مَصَادِر / مَصْدَرَان / مَصَادِرَ / مَصْدَرَيْن", "type": "word"},
+    {"tense1": "éruption", "tense2": "ثَوْرَة / ثَوْرَات / ثَوْرَتَان / ثَوْرَاتٍ / ثَوْرَتَيْن", "type": "word"},
+    {"tense1": "richesse", "tense2": "ثَرْوَة / ثَرَوَات / ثَرْوَتَان / ثَرَوَاتٍ / ثَرْوَتَيْن", "type": "word"},
+    {"tense1": "ignorance", "tense2": "جَهْل / جُهُول / جَهْلَان / جُهُولاً / جَهْلَيْن", "type": "word"},
+    {"tense1": "malédiction", "tense2": "لَعْنَة / لَعَنَات / لَعْنَتَان / لَعَنَاتٍ / لَعْنَتَيْن", "type": "word"},
+    {"tense1": "stimuler", "tense2": "حَفَّزَ / يُحَفِّزُ / تَحْفِيز / حَفِّزْ / يُحَفَّزُ / حُفِّزَ", "type": "verb"},
+    {"tense1": "successful", "tense2": "مُوَفَّق / مُوَفَّقُون / مُوَفَّقَان / مُوَفَّقِين / مُوَفَّقَيْن", "type": "word"},
+    {"tense1": "montant", "tense2": "مَبْلَغ / مَبَالِغ / مَبْلَغَان / مَبَالِغَ / مَبْلَغَيْن", "type": "word"},
+    {"tense1": "se moquer", "tense2": "سَخِرَ / يَسْخَرُ / سُخْرِيَة / اِسْخَرْ / يُسْخَرُ / سُخِرَ", "type": "verb"},
+    {"tense1": "le mérite", "tense2": "فَضْل / فَضَائِل / فَضْلَان / فَضَائِلَ / فَضْلَيْن", "type": "word"},
+    {"tense1": "modèle", "tense2": "نَمُوذَج / نَمَاذِج / نَمُوذَجَان / نَمَاذِجَ / نَمُوذَجَيْن", "type": "word"},
+    {"tense1": "hypothèse", "tense2": "فَرْضِيَّة / فَرْضِيَّات / فَرْضِيَّتَان / فَرْضِيَّاتٍ / فَرْضِيَّتَيْن", "type": "word"},
+    {"tense1": "soulagement", "tense2": "اِرْتِيَاح / اِرْتِيَاحَات / اِرْتِيَاحَان / اِرْتِيَاحَاتٍ / اِرْتِيَاحَيْن", "type": "word"},
+    {"tense1": "porté/durée", "tense2": "مَدَى / مَدَيَات / مَدَيَان / مَدَيَاتٍ / مَدَيَيْن", "type": "word"},
+    {"tense1": "à terre", "tense2": "عَلَى الْبَرّ", "type": "sentence"},
+    {"tense1": "faire semblant", "tense2": "تَظَاهَرَ / يَتَظَاهَرُ / تَظَاهُر / تَظَاهَرْ / يُتَظَاهَرُ / تُظُوهِرَ", "type": "verb"},
+    {"tense1": "écouter attentivement", "tense2": "أَنْصَتَ / يُنْصِتُ / إِنْصَات / أَنْصِتْ / يُنْصَتُ / أُنْصِتَ", "type": "verb"},
+    {"tense1": "aspirer à", "tense2": "تَشَوَّقَ / يَتَشَوَّقُ / تَشَوُّق / تَشَوَّقْ / يُتَشَوَّقُ / تُشُوِّقَ", "type": "verb"},
+    {"tense1": "camouflage", "tense2": "تَمْوِيه / تَمْوِيهَات / تَمْوِيهَان / تَمْوِيهَاتٍ / تَمْوِيهَيْن", "type": "word"},
+    {"tense1": "devinette", "tense2": "أُحْجِيَّة / أَحَاجٍ / أُحْجِيَّتَان / أَحَاجٍ / أُحْجِيَّتَيْن", "type": "word"},
+    {"tense1": "verrou", "tense2": "قُفْل / أَقْفَال / قُفْلَان / أَقْفَالاً / قُفْلَيْن", "type": "word"},
+    {"tense1": "frapper", "tense2": "قَرَعَ / يَقْرَعُ / قَرْع / اِقْرَعْ / يُقْرَعُ / قُرِعَ", "type": "verb"},
+    {"tense1": "spec", "tense2": "صِفَة / صِفَات / صِفَتَان / صِفَاتٍ / صِفَتَيْن", "type": "word"},
+    {"tense1": "enlever", "tense2": "نَزَعَ / يَنْزَعُ / نَزْع / اِنْزَعْ / يُنْزَعُ / نُزِعَ", "type": "verb"},
+    {"tense1": "envelopper", "tense2": "غَلَّفَ / يُغَلِّفُ / تَغْلِيف / غَلِّفْ / يُغَلَّفُ / غُلِّفَ", "type": "verb"},
+    {"tense1": "atelier", "tense2": "وَرْشَة / وَرَش / وَرْشَتَان / وَرَشاً / وَرْشَتَيْن", "type": "word"},
+    {"tense1": "nain", "tense2": "قَزَم / أَقْزَام / قَزَمَان / أَقْزَاماً / قَزَمَيْن", "type": "word"},
+    {"tense1": "festival", "tense2": "مِهْرَجَان / مَهْرَجَانَات / مِهْرَجَانَان / مَهْرَجَانَاتٍ / مِهْرَجَانَيْن", "type": "word"}
+  ]
+
+
         // French
         const pronouns_french = ["je", "tu", "il", "elle", "nous", "vous", "ils", "elles"];
 
