--- a/index.html
+++ b/index.html
@@ -1323,32 +1323,54 @@
     {"tense1": "nain", "tense2": "قَزَم / أَقْزَام / قَزَمَان / أَقْزَاماً / قَزَمَيْن", "type": "word"},
     {"tense1": "festival", "tense2": "مِهْرَجَان / مَهْرَجَانَات / مِهْرَجَانَان / مَهْرَجَانَاتٍ / مِهْرَجَانَيْن", "type": "word"},
     {"tense1": "grossir", "tense2": "سَمِنَ/يَسْمَنُ/سِمَنٌ/اِسْمَنْ/يُسْمَنُ/سُمِنَ", "type": "verb"},
-{"tense1": "droit", "tense2": "حَقّ/حُقُوق/حَقَّان/حُقُوقاً/حَقَّيْن", "type": "word"},
-{"tense1": "jurer", "tense2": "أَقْسَمَ/يُقْسِمُ/قَسَم/أَقْسِمْ/يُقْسَمُ/أُقْسِمَ", "type": "verb"},
-{"tense1": "adopter", "tense2": "تَبَنَّى/يَتَبَنَّى/تَبَنٍّ/تَبَنَّ/يُتَبَنَّى/تُبُنِّيَ", "type": "verb"},
-{"tense1": "insulter", "tense2": "أَهَانَ/يُهِينُ/إِهَانَة/أَهِنْ/يُهَانُ/أُهِينَ", "type": "verb"},
-{"tense1": "naïveté", "tense2": "سَذَاجَة/سَذَاجَات/سَذَاجَتَان/سَذَاجَاتٍ/سَذَاجَتَيْن", "type": "word"},
-{"tense1": "dénier", "tense2": "أَنْكَرَ/يُنْكِرُ/إِنْكَار/أَنْكِرْ/يُنْكَرُ/أُنْكِرَ", "type": "verb"},
-{"tense1": "rumeur", "tense2": "إِشَاعَة/إِشَاعَات/إِشَاعَتَان/إِشَاعَاتٍ/إِشَاعَتَيْن", "type": "word"},
-{"tense1": "décéder", "tense2": "تُوُفِّيَ/يُتَوَفَّى/وَفَاة/تَوَفَّ/يُتَوَفَّى/تُوُفِّيَ", "type": "verb"},
-{"tense1": "amoureux", "tense2": "مُتَيَّم/مُتَيَّمُون/مُتَيَّمَان/مُتَيَّمِين/مُتَيَّمَيْن", "type": "word"},
-{"tense1": "se marier", "tense2": "تَزَوَّجَ/يَتَزَوَّجُ/زَوَاج/تَزَوَّجْ/يُتَزَوَّجُ/تُزُوِّجَ", "type": "verb"},
-{"tense1": "trône", "tense2": "عَرْش/عُرُوش/عَرْشَان/عُرُوشاً/عَرْشَيْن", "type": "word"},
-{"tense1": "militaire", "tense2": "عَسْكَرِيّ/عَسْكَرِيُّون/عَسْكَرِيَّان/عَسْكَرِيِّين/عَسْكَرِيَّيْن", "type": "word"},
-{"tense1": "flèche", "tense2": "سَهْم/سِهَام/سَهْمَان/سِهَاماً/سَهْمَيْن", "type": "word"},
-{"tense1": "glisser", "tense2": "زَلَّ/يَزِلُّ/زَلَل/زُلَّ/يُزَلُّ/زُلَّ", "type": "verb"},
-{"tense1": "glissant", "tense2": "زَلِق/زَلِقُون/زَلِقَان/زَلِقِين/زَلِقَيْن", "type": "word"},
-{"tense1": "écharpe", "tense2": "وِشَاح/وُشُح/وِشَاحَان/وُشُحاً/وِشَاحَيْن", "type": "word"},
-{"tense1": "poli", "tense2": "مُهَذَّب/مُهَذَّبُون/مُهَذَّبَان/مُهَذَّبِين/مُهَذَّبَيْن", "type": "word"},
-{"tense1": "clou", "tense2": "مِسْمَار/مَسَامِير/مِسْمَارَان/مَسَامِيراً/مِسْمَارَيْن", "type": "word"},
-{"tense1": "têtu", "tense2": "عَنِيد/عُنَدَاء/عَنِيدَان/عُنَدَاءً/عَنِيدَيْن", "type": "word"},
-{"tense1": "équation", "tense2": "مُعَادَلَة/مُعَادَلَات/مُعَادَلَتَان/مُعَادَلَاتٍ/مُعَادَلَتَيْن", "type": "word"},
-{"tense1": "ambition", "tense2": "طُمُوح/طُمُوحَات/طُمُوحَان/طُمُوحَاتٍ/طُمُوحَيْن", "type": "word"},
-{"tense1": "déception", "tense2": "خَيْبَة/خَيْبَات/خَيْبَتَان/خَيْبَاتٍ/خَيْبَتَيْن", "type": "word"},
-{"tense1": "labyrinthe", "tense2": "مَتَاهَة/مَتَاهَات/مَتَاهَتَان/مَتَاهَاتٍ/مَتَاهَتَيْن", "type": "word"},
-{"tense1": "code", "tense2": "شَفْرَة/شَفَرَات/شَفْرَتَان/شَفَرَاتٍ/شَفْرَتَيْن", "type": "word"},
-{"tense1": "répondre", "tense2": "لَبَّى/يُلَبِّي/تَلْبِيَة/لَبِّ/يُلَبَّى/لُبِّيَ", "type": "verb"},
-{"tense1": "ralentir", "tense2": "تَمَهَّلَ/يَتَمَهَّلُ/تَمَهُّل/تَمَهَّلْ/يُتَمَهَّلُ/تُمُهِّلَ", "type": "verb"}
+    {"tense1": "droit", "tense2": "حَقّ/حُقُوق/حَقَّان/حُقُوقاً/حَقَّيْن", "type": "word"},
+    {"tense1": "jurer", "tense2": "أَقْسَمَ/يُقْسِمُ/قَسَم/أَقْسِمْ/يُقْسَمُ/أُقْسِمَ", "type": "verb"},
+    {"tense1": "adopter", "tense2": "تَبَنَّى/يَتَبَنَّى/تَبَنٍّ/تَبَنَّ/يُتَبَنَّى/تُبُنِّيَ", "type": "verb"},
+    {"tense1": "insulter", "tense2": "أَهَانَ/يُهِينُ/إِهَانَة/أَهِنْ/يُهَانُ/أُهِينَ", "type": "verb"},
+    {"tense1": "naïveté", "tense2": "سَذَاجَة/سَذَاجَات/سَذَاجَتَان/سَذَاجَاتٍ/سَذَاجَتَيْن", "type": "word"},
+    {"tense1": "dénier", "tense2": "أَنْكَرَ/يُنْكِرُ/إِنْكَار/أَنْكِرْ/يُنْكَرُ/أُنْكِرَ", "type": "verb"},
+    {"tense1": "rumeur", "tense2": "إِشَاعَة/إِشَاعَات/إِشَاعَتَان/إِشَاعَاتٍ/إِشَاعَتَيْن", "type": "word"},
+    {"tense1": "décéder", "tense2": "تُوُفِّيَ/يُتَوَفَّى/وَفَاة/تَوَفَّ/يُتَوَفَّى/تُوُفِّيَ", "type": "verb"},
+    {"tense1": "amoureux", "tense2": "مُتَيَّم/مُتَيَّمُون/مُتَيَّمَان/مُتَيَّمِين/مُتَيَّمَيْن", "type": "word"},
+    {"tense1": "se marier", "tense2": "تَزَوَّجَ/يَتَزَوَّجُ/زَوَاج/تَزَوَّجْ/يُتَزَوَّجُ/تُزُوِّجَ", "type": "verb"},
+    {"tense1": "trône", "tense2": "عَرْش/عُرُوش/عَرْشَان/عُرُوشاً/عَرْشَيْن", "type": "word"},
+    {"tense1": "militaire", "tense2": "عَسْكَرِيّ/عَسْكَرِيُّون/عَسْكَرِيَّان/عَسْكَرِيِّين/عَسْكَرِيَّيْن", "type": "word"},
+    {"tense1": "flèche", "tense2": "سَهْم/سِهَام/سَهْمَان/سِهَاماً/سَهْمَيْن", "type": "word"},
+    {"tense1": "glisser", "tense2": "زَلَّ/يَزِلُّ/زَلَل/زُلَّ/يُزَلُّ/زُلَّ", "type": "verb"},
+    {"tense1": "glissant", "tense2": "زَلِق/زَلِقُون/زَلِقَان/زَلِقِين/زَلِقَيْن", "type": "word"},
+    {"tense1": "écharpe", "tense2": "وِشَاح/وُشُح/وِشَاحَان/وُشُحاً/وِشَاحَيْن", "type": "word"},
+    {"tense1": "poli", "tense2": "مُهَذَّب/مُهَذَّبُون/مُهَذَّبَان/مُهَذَّبِين/مُهَذَّبَيْن", "type": "word"},
+    {"tense1": "clou", "tense2": "مِسْمَار/مَسَامِير/مِسْمَارَان/مَسَامِيراً/مِسْمَارَيْن", "type": "word"},
+    {"tense1": "têtu", "tense2": "عَنِيد/عُنَدَاء/عَنِيدَان/عُنَدَاءً/عَنِيدَيْن", "type": "word"},
+    {"tense1": "équation", "tense2": "مُعَادَلَة/مُعَادَلَات/مُعَادَلَتَان/مُعَادَلَاتٍ/مُعَادَلَتَيْن", "type": "word"},
+    {"tense1": "ambition", "tense2": "طُمُوح/طُمُوحَات/طُمُوحَان/طُمُوحَاتٍ/طُمُوحَيْن", "type": "word"},
+    {"tense1": "déception", "tense2": "خَيْبَة/خَيْبَات/خَيْبَتَان/خَيْبَاتٍ/خَيْبَتَيْن", "type": "word"},
+    {"tense1": "labyrinthe", "tense2": "مَتَاهَة/مَتَاهَات/مَتَاهَتَان/مَتَاهَاتٍ/مَتَاهَتَيْن", "type": "word"},
+    {"tense1": "code", "tense2": "شَفْرَة/شَفَرَات/شَفْرَتَان/شَفَرَاتٍ/شَفْرَتَيْن", "type": "word"},
+    {"tense1": "répondre", "tense2": "لَبَّى/يُلَبِّي/تَلْبِيَة/لَبِّ/يُلَبَّى/لُبِّيَ", "type": "verb"},
+    {"tense1": "ralentir", "tense2": "تَمَهَّلَ/يَتَمَهَّلُ/تَمَهُّل/تَمَهَّلْ/يُتَمَهَّلُ/تُمُهِّلَ", "type": "verb"},
+    {"tense1": "Se reposer", "tense2": "استراح / يستريح / يَستَرīْحُ / يَستَرīحُونَ / يَستَرīحَانِ", "type": "verb"},
+    {"tense1": "Empirer", "tense2": "تَفاقَمَ / يَتَفاقَمُ / تَفاقُم / تَفاقَمْ", "type": "verb"},
+    {"tense1": "Dépression", "tense2": "إكْتِئاب", "type": "word"},
+    {"tense1": "Être confus", "tense2": "حَارَ / يَحِيرُ / حَيْرَة / حِرْ", "type": "verb"},
+    {"tense1": "Courant", "tense2": "تَيار", "type": "word"},
+    {"tense1": "Cowboy", "tense2": "رُعاةُ البَقَر", "type": "word"},
+    {"tense1": "Poignée", "tense2": "مِقْبَض", "type": "word"},
+    {"tense1": "Frein", "tense2": "مَكابِح", "type": "word"},
+    {"tense1": "Tuyau", "tense2": "خَرْطوم", "type": "word"},
+    {"tense1": "Identité", "tense2": "هُوِّيَّة", "type": "word"},
+    {"tense1": "Choqué", "tense2": "مَصْدوم", "type": "word"},
+    {"tense1": "Retraite", "tense2": "تَقاعُد", "type": "word"},
+    {"tense1": "Divorce", "tense2": "طَلاق", "type": "word"},
+    {"tense1": "Prévoir", "tense2": "كانَ يَنْوِي / يَنْوِي / نَوْي / انْوِ / يُنْوَى / كانَ يُنْوَى", "type": "verb"},
+    {"tense1": "Recourir à", "tense2": "يَلْجَأُ إلى / لَجَأَ إلى / لُجُوء / اِلْجَأْ إلى", "type": "verb"},
+    {"tense1": "Détourner", "tense2": "صَرَفَ / يَصْرِفُ / صَرْف / اِصْرِف", "type": "verb"},
+    {"tense1": "Provenir", "tense2": "نَبَعَ / يَنْبَعُ / نَبْع / انْبَعْ", "type": "verb"},
+    {"tense1": "Psychologiquement", "tense2": "نَفْسِيّاً", "type": "word"},
+    {"tense1": "Impasse", "tense2": "مَأزَق", "type": "word"},
+    {"tense1": "Au lieu de", "tense2": "عِوَضاً عَن", "type": "sentence"},
+    {"tense1": "Argument", "tense2": "حُجَّة", "type": "word"},
+    {"tense1": "S'engager", "tense2": "اِلْتَزَمَ / يَلْتَزِمُ / اِلْتِزام / اِلْتَزِمْ", "type": "verb"}
 ]
 
 
