new arabic words

--- a/index.html
+++ b/index.html
@@ -1349,28 +1349,28 @@
     {"tense1": "code", "tense2": "شَفْرَة/شَفَرَات/شَفْرَتَان/شَفَرَاتٍ/شَفْرَتَيْن", "type": "word"},
     {"tense1": "répondre", "tense2": "لَبَّى/يُلَبِّي/تَلْبِيَة/لَبِّ/يُلَبَّى/لُبِّيَ", "type": "verb"},
     {"tense1": "ralentir", "tense2": "تَمَهَّلَ/يَتَمَهَّلُ/تَمَهُّل/تَمَهَّلْ/يُتَمَهَّلُ/تُمُهِّلَ", "type": "verb"},
-    {"tense1": "Se reposer", "tense2": "استراح / يستريح / يَستَرīْحُ / يَستَرīحُونَ / يَستَرīحَانِ", "type": "verb"},
-    {"tense1": "Empirer", "tense2": "تَفاقَمَ / يَتَفاقَمُ / تَفاقُم / تَفاقَمْ", "type": "verb"},
-    {"tense1": "Dépression", "tense2": "إكْتِئاب", "type": "word"},
-    {"tense1": "Être confus", "tense2": "حَارَ / يَحِيرُ / حَيْرَة / حِرْ", "type": "verb"},
-    {"tense1": "Courant", "tense2": "تَيار", "type": "word"},
-    {"tense1": "Cowboy", "tense2": "رُعاةُ البَقَر", "type": "word"},
-    {"tense1": "Poignée", "tense2": "مِقْبَض", "type": "word"},
-    {"tense1": "Frein", "tense2": "مَكابِح", "type": "word"},
-    {"tense1": "Tuyau", "tense2": "خَرْطوم", "type": "word"},
-    {"tense1": "Identité", "tense2": "هُوِّيَّة", "type": "word"},
-    {"tense1": "Choqué", "tense2": "مَصْدوم", "type": "word"},
-    {"tense1": "Retraite", "tense2": "تَقاعُد", "type": "word"},
-    {"tense1": "Divorce", "tense2": "طَلاق", "type": "word"},
-    {"tense1": "Prévoir", "tense2": "كانَ يَنْوِي / يَنْوِي / نَوْي / انْوِ / يُنْوَى / كانَ يُنْوَى", "type": "verb"},
-    {"tense1": "Recourir à", "tense2": "يَلْجَأُ إلى / لَجَأَ إلى / لُجُوء / اِلْجَأْ إلى", "type": "verb"},
-    {"tense1": "Détourner", "tense2": "صَرَفَ / يَصْرِفُ / صَرْف / اِصْرِف", "type": "verb"},
-    {"tense1": "Provenir", "tense2": "نَبَعَ / يَنْبَعُ / نَبْع / انْبَعْ", "type": "verb"},
-    {"tense1": "Psychologiquement", "tense2": "نَفْسِيّاً", "type": "word"},
-    {"tense1": "Impasse", "tense2": "مَأزَق", "type": "word"},
-    {"tense1": "Au lieu de", "tense2": "عِوَضاً عَن", "type": "sentence"},
-    {"tense1": "Argument", "tense2": "حُجَّة", "type": "word"},
-    {"tense1": "S'engager", "tense2": "اِلْتَزَمَ / يَلْتَزِمُ / اِلْتِزام / اِلْتَزِمْ", "type": "verb"}
+      {"tense1": "Se reposer", "tense2": "اِسْتَرَاحَ/يَسْتَرِيحُ/اِسْتِرَاحَة/اِسْتَرِحْ/يُسْتَرَاحُ/اُسْتُرِيحَ", "type": "verb"},
+      {"tense1": "Empirer", "tense2": "تَفَاقَمَ/يَتَفَاقَمُ/تَفَاقُم/تَفَاقَمْ/يُتَفَاقَمُ/تُفُوقِمَ", "type": "verb"},
+      {"tense1": "Dépression", "tense2": "اِكْتِئَاب/اِكْتِئَابَات/اِكْتِئَابَان/اِكْتِئَابَاتٍ/اِكْتِئَابَيْن", "type": "word"},
+      {"tense1": "Être confus", "tense2": "حَارَ/يَحِيرُ/حَيْرَة/حَرْ/يُحَارُ/حِيرَ", "type": "verb"},
+      {"tense1": "Courant", "tense2": "تَيَّار/تَيَّارَات/تَيَّارَان/تَيَّارَاتٍ/تَيَّارَيْن", "type": "word"},
+      {"tense1": "Cowboy", "tense2": "رَاعِي البَقَر/رُعَاة البَقَر/رَاعِيَا البَقَر/رُعَاةَ البَقَر/رَاعِيَيْ البَقَر", "type": "word"},
+      {"tense1": "Poignée", "tense2": "مَقْبَض/مَقَابِض/مَقْبَضَان/مَقَابِضَ/مَقْبَضَيْن", "type": "word"},
+      {"tense1": "Frein", "tense2": "مَكْبَح/مَكَابِح/مَكْبَحَان/مَكَابِحَ/مَكْبَحَيْن", "type": "word"},
+      {"tense1": "Tuyau", "tense2": "خُرْطُوم/خَرَاطِيم/خُرْطُومَان/خَرَاطِيمَ/خُرْطُومَيْن", "type": "word"},
+      {"tense1": "Identité", "tense2": "هُوِيَّة/هُوِيَّات/هُوِيَّتَان/هُوِيَّاتٍ/هُوِيَّتَيْن", "type": "word"},
+      {"tense1": "Choqué", "tense2": "مَصْدُوم/مَصْدُومُون/مَصْدُومَان/مَصْدُومِين/مَصْدُومَيْن", "type": "word"},
+      {"tense1": "Retraite", "tense2": "تَقَاعُد/تَقَاعُدَات/تَقَاعُدَان/تَقَاعُدَاتٍ/تَقَاعُدَيْن", "type": "word"},
+      {"tense1": "Divorce", "tense2": "طَلَاق/طَلَاقَات/طَلَاقَان/طَلَاقَاتٍ/طَلَاقَيْن", "type": "word"},
+      {"tense1": "Prévoir", "tense2": "نَوَى/يَنْوِي/نِيَّة/اِنْوِ/يُنْوَى/نُوِيَ", "type": "verb"},
+      {"tense1": "Recourir à", "tense2": "لَجَأَ/يَلْجَأُ/لُجُوء/اِلْجَأْ/يُلْجَأُ/لُجِئَ", "type": "verb"},
+      {"tense1": "Détourner", "tense2": "صَرَفَ/يَصْرِفُ/صَرْف/اِصْرِفْ/يُصْرَفُ/صُرِفَ", "type": "verb"},
+      {"tense1": "Provenir", "tense2": "نَبَعَ/يَنْبَعُ/نَبْع/اِنْبَعْ/يُنْبَعُ/نُبِعَ", "type": "verb"},
+      {"tense1": "Psychologiquement", "tense2": "نَفْسِيّاً", "type": "word"},
+      {"tense1": "Impasse", "tense2": "مَأْزِق/مَآزِق/مَأْزِقَان/مَآزِقَ/مَأْزِقَيْن", "type": "word"},
+      {"tense1": "Au lieu de", "tense2": "عِوَضاً عَنْ", "type": "sentence"},
+      {"tense1": "Argument", "tense2": "حُجَّة/حُجَج/حُجَّتَان/حُجَجاً/حُجَّتَيْن", "type": "word"},
+      {"tense1": "S'engager", "tense2": "اِلْتَزَمَ/يَلْتَزِمُ/اِلْتِزَام/اِلْتَزِمْ/يُلْتَزَمُ/اُلْتُزِمَ", "type": "verb"}
 ]
 
 
